fix alignment on desktop web

--- a/frontend/src/pages/AboutUsPage/AboutUsMetrics.css
+++ b/frontend/src/pages/AboutUsPage/AboutUsMetrics.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 150px;
-  padding: 30px 20px;
+  gap: 15rem;
+  padding: 30px 40px;
   width: 100%;
   max-width: 100vw;
   overflow: hidden;
