--- a/frontend/src/pages/AboutUsPage/WhyChooseUs.css
+++ b/frontend/src/pages/AboutUsPage/WhyChooseUs.css
@@ -11,7 +11,7 @@
   transform: translateX(-50%);
   display: flex;
   gap: 2rem;
-  padding: 2rem;
+  padding: 3rem;
   box-sizing: border-box;
   overflow: hidden;
 }
