--- a/frontend/src/pages/BlogPage/LatestPosts.css
+++ b/frontend/src/pages/BlogPage/LatestPosts.css
@@ -1,6 +1,6 @@
 .latest-posts-section {
   background-color: #fff;
-  padding: 2.5rem 2rem;
+  padding: 3rem ;
   font-family: 'Open Sans', sans-serif;
   margin: 0 auto;
 }
