--- a/frontend/src/pages/BlogPage/OurBlogs.css
+++ b/frontend/src/pages/BlogPage/OurBlogs.css
@@ -1,7 +1,7 @@
 .ourblogs-container {
   width: 100%;
   max-width:1600px !important;
-  padding: 2.5rem 2rem;
+  padding: 2.5rem;
   background: #fff;
   border-radius: 16px;
   box-sizing: border-box;
@@ -43,6 +43,7 @@
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   gap: 2rem;
+  padding: 0 0.5rem;
 }
 
 .ourblogs-card {
